fix: remove unnecessary overflow scroll

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #00183d;
-  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 code {
